<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
        android:id="@+id/bottom_bar"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioButton
            android:id="@+id/bottom_bing"
            style="@style/bottom_bar"
            android:drawableTop="@drawable/bottom_bing"
            android:contentDescription="@string/bing"
    />

    <RadioButton
            android:id="@+id/bottom_ng"
            style="@style/bottom_bar"
            android:drawableTop="@drawable/bottom_ng"
            android:contentDescription="@string/ng"
    />

    <RadioButton
            android:id="@+id/bottom_nasa"
            style="@style/bottom_bar"
            android:drawableTop="@drawable/bottom_nasa"
            android:scaleY="1.22"
            android:scaleX="1.22"
            android:contentDescription="@string/nasa"
    />

    <RadioButton
            android:id="@+id/bottom_mine"
            style="@style/bottom_bar"
            android:drawableTop="@drawable/user"
            android:contentDescription="@string/user"
    />

</RadioGroup>

