<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <Button
            android:id="@+id/title_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titlebar_more"
            android:layout_gravity="center"
            android:layout_margin="5dp"
    />

    <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/titlebar_text"
            android:textSize="24sp"
    />

    <Button
            android:id="@+id/title_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/titlebar_search"
    />

</LinearLayout>
